@@ -1,3 +1,4 @@
+Resource generator: exclude flavor names from generated flavors
 Added automatic resource generation
 Factored out svn revision strategies into top level interface RevisionStrategy
 5/20/11 Added JavaAllSimProject which can be used to build all java sims from "all-sims"
